[gd_scene load_steps=11 format=3 uid="uid://bjj5hw1d1pbl"]

[ext_resource type="Texture2D" uid="uid://b1r7mi4naobj0" path="res://Demo/Sprites/lilguy3.png" id="1_8eo66"]
[ext_resource type="Script" path="res://Demo/scripts/player_movement.gd" id="1_ym8ee"]
[ext_resource type="Texture2D" uid="uid://dod6ucddssd52" path="res://Demo/Sprites/lilguy3runjump.png" id="2_nipwj"]
[ext_resource type="Texture2D" uid="uid://cbywbqfnbtoal" path="res://Demo/Sprites/lilguy3jumpdown.png" id="3_vpf6a"]
[ext_resource type="Texture2D" uid="uid://cec7y2uwe1pm2" path="res://Demo/Sprites/lilguy3blink.png" id="4_dlih4"]
[ext_resource type="Texture2D" uid="uid://bngw00gprxmmi" path="res://Demo/Sprites/lilguy3jumpup.png" id="5_ahrof"]
[ext_resource type="PackedScene" uid="uid://cub4sgnrp1jbm" path="res://Demo/scenes/death_particles.tscn" id="7_tlm4h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_molac"]
animations = [{
"frames": [{
"duration": 10.0,
"texture": ExtResource("1_8eo66")
}, {
"duration": 1.0,
"texture": ExtResource("4_dlih4")
}, {
"duration": 1.0,
"texture": ExtResource("1_8eo66")
}, {
"duration": 1.0,
"texture": ExtResource("4_dlih4")
}, {
"duration": 1.0,
"texture": ExtResource("1_8eo66")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_vpf6a")
}],
"loop": true,
"name": &"jump_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nipwj")
}],
"loop": true,
"name": &"jump_neutral",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ahrof")
}],
"loop": true,
"name": &"jump_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8eo66")
}, {
"duration": 1.0,
"texture": ExtResource("2_nipwj")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssjyn"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7coln"]
size = Vector2(14, 11)

[node name="Player" type="CharacterBody2D"]
input_pickable = true
script = ExtResource("1_ym8ee")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_molac")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ssjyn")

[node name="DeathParticles" parent="." instance=ExtResource("7_tlm4h")]

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_7coln")
debug_color = Color(1, 0, 0, 0.419608)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
